--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 /NetBeans/Tema 3/Ejercicio6Tema3/build/
 /NetBeans/Tema 3/Ejercicio8Tema3/nbproject/private/
 /NetBeans/Tema 3/Ejercicio8Tema3/build/
+/NetBeans/Tema 3/Ejercicio9Tema3/build/
+/NetBeans/Tema 3/Ejercicio9Tema3/dist/
