--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@
 /NetBeans/Tema 3/Ejercicio8Tema3/build/
 /NetBeans/Tema 3/Ejercicio9Tema3/build/
 /NetBeans/Tema 3/Ejercicio9Tema3/dist/
+/NetBeans/Tema 3/Ejercicio11Tema3/nbproject/private/
+/NetBeans/Tema 3/Ejercicio11Tema3/build/
+/NetBeans/Tema 3/Ejercicio12Tema3/nbproject/private/
+/NetBeans/Tema 3/Ejercicio12Tema3/build/
