--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,15 @@
 /NetBeans/Tema 3/Ejercicio11Tema3/build/
 /NetBeans/Tema 3/Ejercicio12Tema3/nbproject/private/
 /NetBeans/Tema 3/Ejercicio12Tema3/build/
+/NetBeans/Tema 3/Ejericico13Tema3/nbproject/private/
+/NetBeans/Tema 3/Ejericico13Tema3/build/
+/NetBeans/Tema 3/Ejercicio14Tema3/nbproject/private/
+/NetBeans/Tema 3/Ejercicio14Tema3/build/
+/NetBeans/Tema 3/Ejercicio15Tema3/nbproject/private/
+/NetBeans/Tema 3/Ejercicio15Tema3/build/
+/NetBeans/Tema 3/Ejercicio16Tema3/nbproject/private/
+/NetBeans/Tema 3/Ejercicio16Tema3/build/
+/NetBeans/Tema 3/Ejercicio17Tema3/nbproject/private/
+/NetBeans/Tema 3/Ejercicio17Tema3/build/
+/NetBeans/Tema 3/Ejercicio18Tema3/nbproject/private/
+/NetBeans/Tema 3/Ejercicio18Tema3/build/
