--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@
 /NetBeans/Tema 3/Ejercicio17Tema3/build/
 /NetBeans/Tema 3/Ejercicio18Tema3/nbproject/private/
 /NetBeans/Tema 3/Ejercicio18Tema3/build/
+/NetBeans/Tema 3/Ejercicio27Tema3/nbproject/private/
+/NetBeans/Tema 3/Ejercicio27Tema3/build/
