--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,9 @@
 /NetBeans/Tema 3/Ejercicio18Tema3/build/
 /NetBeans/Tema 3/Ejercicio27Tema3/nbproject/private/
 /NetBeans/Tema 3/Ejercicio27Tema3/build/
+/NetBeans/Tema 3/Ejercicio18Tema3/dist/
+/NetBeans/Tema 3/Ejercicio21Tema3/nbproject/private/
+/NetBeans/Tema 3/Ejercicio21Tema3/build/
+/NetBeans/Tema 3/Ejercicio24Tema3/nbproject/private/
+/NetBeans/Tema 3/Ejercicio24Tema3/build/
+/NetBeans/Tema 3/Ejercicio24Tema3/dist/
