Ejercicios corregidos y introduccion tema 4

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,6 @@
 /NetBeans/Tema 3/Ejercicio24Tema3/nbproject/private/
 /NetBeans/Tema 3/Ejercicio24Tema3/build/
 /NetBeans/Tema 3/Ejercicio24Tema3/dist/
+/NetBeans/Tema 3/Ejercicio27Tema3/dist/
+/NetBeans/Tema 4/Introduccion/nbproject/private/
+/NetBeans/Tema 4/Introduccion/build/
