--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@
 /NetBeans/Tema 3/Ejercicio27Tema3/dist/
 /NetBeans/Tema 4/Introduccion/nbproject/private/
 /NetBeans/Tema 4/Introduccion/build/
+/NetBeans/Tema 4/Ejercicio7Tema4/nbproject/private/
