--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,6 @@
 /NetBeans/Tema 4/Introduccion/nbproject/private/
 /NetBeans/Tema 4/Introduccion/build/
 /NetBeans/Tema 4/Ejercicio7Tema4/nbproject/private/
+/NetBeans/Tema 4/Ejercicio7Tema4/build/
+/NetBeans/Tema 4/Ejercicio14Tema4/nbproject/private/
+/NetBeans/Tema 4/Ejercicio14Tema4/build/
