--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@
 /NetBeans/Tema 4/Ejercicio7Tema4/build/
 /NetBeans/Tema 4/Ejercicio14Tema4/nbproject/private/
 /NetBeans/Tema 4/Ejercicio14Tema4/build/
+/NetBeans/Tema 4/Ejercicio20Tema4/nbproject/private/
+/NetBeans/Tema 4/Ejercicio20Tema4/build/
