--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,5 @@
 /NetBeans/Tema 4/Ejercicio14Tema4/build/
 /NetBeans/Tema 4/Ejercicio20Tema4/nbproject/private/
 /NetBeans/Tema 4/Ejercicio20Tema4/build/
+/NetBeans/Tema 4/Ejercicio26Tema4/nbproject/private/
+/NetBeans/Tema 4/Ejercicio26Tema4/build/
