--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,5 @@
 /NetBeans/Tema 4/Ejercicio20Tema4/build/
 /NetBeans/Tema 4/Ejercicio26Tema4/nbproject/private/
 /NetBeans/Tema 4/Ejercicio26Tema4/build/
+/NetBeans/Tema 4/Ejercicio21 Tema4/nbproject/private/
+/NetBeans/Tema 4/Ejercicio21 Tema4/build/
