--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,5 @@
 /NetBeans/Tema 4/Ejercicio26Tema4/build/
 /NetBeans/Tema 4/Ejercicio21 Tema4/nbproject/private/
 /NetBeans/Tema 4/Ejercicio21 Tema4/build/
+/NetBeans/Tema 5/Introduccion/nbproject/private/
+/NetBeans/Tema 5/Introduccion/build/
