--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,4 @@
 /NetBeans/Tema 4/Ejercicio21 Tema4/build/
 /NetBeans/Tema 5/Introduccion/nbproject/private/
 /NetBeans/Tema 5/Introduccion/build/
+/NetBeans/Tema 5/Ejercicio16Tema5/nbproject/private/
