Correos Proyecto - Tema 4

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,6 @@
 /NetBeans/Tema 5/Introduccion/nbproject/private/
 /NetBeans/Tema 5/Introduccion/build/
 /NetBeans/Tema 5/Ejercicio16Tema5/nbproject/private/
+/NetBeans/Tema 4/Cola de Correos/nbproject/private/
+/NetBeans/Tema 4/Correos/nbproject/private/
+/NetBeans/Tema 4/Correos/build/
