--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,4 @@
 /NetBeans/Tema 4/Cola de Correos/nbproject/private/
 /NetBeans/Tema 4/Correos/nbproject/private/
 /NetBeans/Tema 4/Correos/build/
+/NetBeans/Tema 5/Ejercicio16Tema5/build/
