--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,5 @@
 /NetBeans/Tema 4/Correos/nbproject/private/
 /NetBeans/Tema 4/Correos/build/
 /NetBeans/Tema 5/Ejercicio16Tema5/build/
+/NetBeans/Tema 4/Nave/nbproject/private/
+/NetBeans/Tema 4/Nave/build/
