--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,5 @@
 /NetBeans/Tema 5/Ejercicio16Tema5/build/
 /NetBeans/Tema 4/Nave/nbproject/private/
 /NetBeans/Tema 4/Nave/build/
+/NetBeans/Tema 5/Ejercicio15Tema5/nbproject/private/
+/NetBeans/Tema 5/Ejercicio15Tema5/build/
