--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,5 @@
 /NetBeans/Tema 4/Nave/build/
 /NetBeans/Tema 5/Ejercicio15Tema5/nbproject/private/
 /NetBeans/Tema 5/Ejercicio15Tema5/build/
+/NetBeans/Tema 5/Ejercicio19Tema5/nbproject/private/
+/NetBeans/Tema 5/Ejercicio19Tema5/build/
