--- a/NetBeans/Tema 5/Ejercicio19Tema5/nbproject/project.properties
+++ b/NetBeans/Tema 5/Ejercicio19Tema5/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Introduccion.jar
+dist.jar=${dist.dir}/Ejercicio19Tema5.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/Introduccion
+dist.jlink.output=${dist.jlink.dir}/Ejercicio19Tema5
 excludes=
 includes=**
 jar.compress=false
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=Introduccion
-main.class=introduccion.Introduccion
+jlink.launcher.name=Ejercicio19Tema5
+main.class=ejercicio19tema5.Ejercicio19Tema5
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
