--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,4 @@
 /NetBeans/Tema 5/Ejercicio15Tema5/build/
 /NetBeans/Tema 5/Ejercicio19Tema5/nbproject/private/
 /NetBeans/Tema 5/Ejercicio19Tema5/build/
+/NetBeans/Tema 5/Herencia/nbproject/private/
