Ejercicio25Tema5 - a medias

--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,4 @@
 /NetBeans/Tema 5/Ejercicio19Tema5/nbproject/private/
 /NetBeans/Tema 5/Ejercicio19Tema5/build/
 /NetBeans/Tema 5/Herencia/nbproject/private/
+/NetBeans/Tema 5/Ejercicio25Tema5/nbproject/private/
