Ejercicio25Tema5 Obligatorio

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@
 /NetBeans/Tema 3/Ejercicio6Tema3/build/
 /NetBeans/Tema 3/Ejercicio8Tema3/nbproject/private/
 /NetBeans/Tema 3/Ejercicio8Tema3/build/
+/NetBeans/Tema 5/Ejercicio25Tema5/nbproject/private/
+/NetBeans/Tema 5/Ejercicio25Tema5/build/
+/NetBeans/Tema 5/Ejercicio25Tema5/dist/
