--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 /NetBeans/Tema 5/Ejercicio25Tema5/nbproject/private/
 /NetBeans/Tema 5/Ejercicio25Tema5/build/
 /NetBeans/Tema 5/Ejercicio25Tema5/dist/
+/NetBeans/Tema 5/Ejercicio23Tema5/nbproject/private/
+/NetBeans/Tema 5/Ejercicio23Tema5/build/
