--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@
 /NetBeans/Tema 5/Ejercicio25Tema5/dist/
 /NetBeans/Tema 5/Ejercicio23Tema5/nbproject/private/
 /NetBeans/Tema 5/Ejercicio23Tema5/build/
+/NetBeans/Tema 6/Teoria/nbproject/private/
+/NetBeans/Tema 6/Teoria/build/
