--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@
 /NetBeans/Tema 5/Ejercicio23Tema5/build/
 /NetBeans/Tema 6/Teoria/nbproject/private/
 /NetBeans/Tema 6/Teoria/build/
+/NetBeans/Tema 6/Ejercicio4Tema6/nbproject/private/
+/NetBeans/Tema 6/Ejercicio4Tema6/build/
