--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@
 /NetBeans/Tema 6/Teoria/build/
 /NetBeans/Tema 6/Ejercicio4Tema6/nbproject/private/
 /NetBeans/Tema 6/Ejercicio4Tema6/build/
+/NetBeans/Tema 6/Ejercicio5Tema6/nbproject/private/
