--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@
 /NetBeans/Tema 6/Ejercicio4Tema6/nbproject/private/
 /NetBeans/Tema 6/Ejercicio4Tema6/build/
 /NetBeans/Tema 6/Ejercicio5Tema6/nbproject/private/
+/NetBeans/Tema 6/Ejercicio5Tema6/build/
+/NetBeans/Tema 6/Ejercicio5Tema6/dist/
