--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@
 /NetBeans/Tema 6/Ejercicio5Tema6/nbproject/private/
 /NetBeans/Tema 6/Ejercicio5Tema6/build/
 /NetBeans/Tema 6/Ejercicio5Tema6/dist/
+/NetBeans/Tema 6/Ejercicio1Tema6/nbproject/private/
+/NetBeans/Tema 6/Ejercicio1Tema6/build/
