--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@
 /NetBeans/Tema 6/Ejercicio5Tema6/dist/
 /NetBeans/Tema 6/Ejercicio1Tema6/nbproject/private/
 /NetBeans/Tema 6/Ejercicio1Tema6/build/
+/NetBeans/Tema 6/Ejercicio2Tema6/nbproject/private/
+/NetBeans/Tema 6/Ejercicio2Tema6/build/
+/NetBeans/Tema 6/Ejercicio2Tema6/dist/
