--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,6 @@
 /NetBeans/Tema 6/Ejercicio2Tema6/nbproject/private/
 /NetBeans/Tema 6/Ejercicio2Tema6/build/
 /NetBeans/Tema 6/Ejercicio2Tema6/dist/
+/NetBeans/Tema 6/Ejercicio7Tema6/nbproject/private/
+/NetBeans/Tema 6/Ejercicio7Tema6/build/
+/NetBeans/Tema 6/Ejercicio7Tema6/dist/
