--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,6 @@
 /NetBeans/Tema 6/Ejercicio7Tema6/nbproject/private/
 /NetBeans/Tema 6/Ejercicio7Tema6/build/
 /NetBeans/Tema 6/Ejercicio7Tema6/dist/
+/NetBeans/Tema 6/Ejercicio9Tema6/nbproject/private/
+/NetBeans/Tema 6/Ejercicio9Tema6/build/
+/NetBeans/Tema 6/Ejercicio12Tema6/nbproject/private/
