--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@
 /NetBeans/Tema 6/Ejercicio7Tema6/nbproject/private/
 /NetBeans/Tema 6/Ejercicio7Tema6/build/
 /NetBeans/Tema 6/Ejercicio7Tema6/dist/
+/NetBeans/Tema 5/Programa de donaciones Ampliacion/nbproject/private/
+/NetBeans/Tema 5/Programa de donaciones Ampliacion/build/
