Ejercicios 1 al 3 Tema7

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,10 @@
 /NetBeans/Tema 6/Ejercicio7Tema6/dist/
 /NetBeans/Tema 5/Programa de donaciones Ampliacion/nbproject/private/
 /NetBeans/Tema 5/Programa de donaciones Ampliacion/build/
+/NetBeans/Tema 7/Ejercicio1Tema7/nbproject/private/
+/NetBeans/Tema 7/Ejercicio1Tema7/build/
+/NetBeans/Tema 7/Ejercicio1Tema7/dist/
+/NetBeans/Tema 7/Ejercicio2Tema7/nbproject/private/
+/NetBeans/Tema 7/Ejercicio2Tema7/build/
+/NetBeans/Tema 7/Ejercicio3Tema7/nbproject/private/
+/NetBeans/Tema 7/Ejercicio3Tema7/build/
