--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@
 /NetBeans/Tema 7/Ejercicio2Tema7/build/
 /NetBeans/Tema 7/Ejercicio3Tema7/nbproject/private/
 /NetBeans/Tema 7/Ejercicio3Tema7/build/
+/NetBeans/Tema 7/Ejercicio8Tema7/nbproject/private/
