Ejercicio8 y 9 Tema 7 a medias

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,6 @@
 /NetBeans/Tema 7/Ejercicio3Tema7/nbproject/private/
 /NetBeans/Tema 7/Ejercicio3Tema7/build/
 /NetBeans/Tema 7/Ejercicio8Tema7/nbproject/private/
+/NetBeans/Tema 7/Ejercicio8Tema7/build/
+/NetBeans/Tema 7/Ejercicio9Tema7/nbproject/private/
+/NetBeans/Tema 7/Ejercicio9Tema7/build/
