--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@
 /NetBeans/Tema 7/Ejercicio8Tema7/build/
 /NetBeans/Tema 7/Ejercicio9Tema7/nbproject/private/
 /NetBeans/Tema 7/Ejercicio9Tema7/build/
+/NetBeans/Tema 7/Ejercicio15Tema7/nbproject/private/
+/NetBeans/Tema 7/Ejercicio15Tema7/build/
