--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,5 @@
 /NetBeans/Tema 7/Ejercicio4Tema7/build/
 /NetBeans/Tema 7/Ejercicio5Tema7/nbproject/private/
 /NetBeans/Tema 7/Ejercicio5Tema7/build/
+/NetBeans/Tema 7/Ejercicio14Tema7/nbproject/private/
+/NetBeans/Tema 7/Ejercicio14Tema7/build/
