--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,4 @@
 /NetBeans/Tema 7/Ejercicio5Tema7/build/
 /NetBeans/Tema 7/Ejercicio14Tema7/nbproject/private/
 /NetBeans/Tema 7/Ejercicio14Tema7/build/
+/NetBeans/Tema 7/Ejercicio16Tema7/nbproject/private/
