--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,4 @@
 /NetBeans/Tema 7/Ejercicio14Tema7/nbproject/private/
 /NetBeans/Tema 7/Ejercicio14Tema7/build/
 /NetBeans/Tema 7/Ejercicio16Tema7/nbproject/private/
+/NetBeans/Tema 7/Ejercicio16Tema7/build/
