--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,5 @@
 /NetBeans/Tema 7/Ejercicio14Tema7/build/
 /NetBeans/Tema 7/Ejercicio16Tema7/nbproject/private/
 /NetBeans/Tema 7/Ejercicio16Tema7/build/
+/NetBeans/Tema 7/Ejercicio17Tema7/nbproject/private/
+/NetBeans/Tema 7/Ejercicio17Tema7/build/
