--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,4 @@
 /NetBeans/Tema 7/Ejercicio16Tema7/build/
 /NetBeans/Tema 7/Ejercicio17Tema7/nbproject/private/
 /NetBeans/Tema 7/Ejercicio17Tema7/build/
+/NetBeans/Tema 7/Ejercicio10Tema7/build/
