--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,5 @@
 /NetBeans/Tema 7/Ejercicio17Tema7/nbproject/private/
 /NetBeans/Tema 7/Ejercicio17Tema7/build/
 /NetBeans/Tema 7/Ejercicio10Tema7/build/
+/NetBeans/Tema 7/Ejercicio6Tema7/nbproject/private/
+/NetBeans/Tema 7/Ejercicio6Tema7/build/
