--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,5 @@
 /NetBeans/Tema 7/Ejercicio10Tema7/build/
 /NetBeans/Tema 7/Ejercicio6Tema7/nbproject/private/
 /NetBeans/Tema 7/Ejercicio6Tema7/build/
+/NetBeans/Tema 8/Ejercicio1Tema8/nbproject/private/
+/NetBeans/Tema 8/Ejercicio1Tema8/build/
