Ejercicio6Tema8 a medias

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,4 @@
 /NetBeans/Tema 7/Ejercicio6Tema7/build/
 /NetBeans/Tema 8/Ejercicio1Tema8/nbproject/private/
 /NetBeans/Tema 8/Ejercicio1Tema8/build/
+/NetBeans/Tema 8/Ejercicio6Tema8/nbproject/private/
