--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,4 @@
 /NetBeans/Tema 8/Ejercicio1Tema8/nbproject/private/
 /NetBeans/Tema 8/Ejercicio1Tema8/build/
 /NetBeans/Tema 8/Ejercicio6Tema8/nbproject/private/
+/NetBeans/Tema 8/Ejercicio6Tema8/build/
