Ejercicio7Tema8 a medias

--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,5 @@
 /NetBeans/Tema 8/Ejercicio1Tema8/build/
 /NetBeans/Tema 8/Ejercicio6Tema8/nbproject/private/
 /NetBeans/Tema 8/Ejercicio6Tema8/build/
+/NetBeans/Tema 8/Ejercicio7Tema8/nbproject/private/
+/NetBeans/Tema 8/Ejercicio7Tema8/build/
