--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,6 @@
 /NetBeans/Tema 8/Ejercicio6Tema8/build/
 /NetBeans/Tema 8/Ejercicio7Tema8/nbproject/private/
 /NetBeans/Tema 8/Ejercicio7Tema8/build/
+/NetBeans/Tema 8/Ejercicio11-12Tema8/nbproject/private/
+/NetBeans/Tema 8/Ejercicio11y12Tema8/nbproject/private/
+/NetBeans/Tema 8/Ejercicio11y12Tema8/build/
