--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,5 @@
 /NetBeans/Tema 8/Ejercicio11-12Tema8/nbproject/private/
 /NetBeans/Tema 8/Ejercicio11y12Tema8/nbproject/private/
 /NetBeans/Tema 8/Ejercicio11y12Tema8/build/
+/NetBeans/Tema 8/Ejercicio13Tema8/nbproject/private/
+/NetBeans/Tema 8/Ejercicio13y14Tema8/nbproject/private/
