--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,6 @@
 /NetBeans/Tema 8/Ejercicio11y12Tema8/build/
 /NetBeans/Tema 8/Ejercicio13Tema8/nbproject/private/
 /NetBeans/Tema 8/Ejercicio13y14Tema8/nbproject/private/
+/NetBeans/Tema 8/Ejercicio9Tema8/nbproject/private/
+/NetBeans/Tema 8/Ejercicio9Tema8/build/
+/NetBeans/Tema 8/Ejercicio9Tema8/dist/
