--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,4 @@
 /NetBeans/Tema 8/Ejercicio9Tema8/nbproject/private/
 /NetBeans/Tema 8/Ejercicio9Tema8/build/
 /NetBeans/Tema 8/Ejercicio9Tema8/dist/
+/NetBeans/Tema 8/Ejercicio13y14Tema8/build/
