Ejercicio15Tema8 a medias

--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,5 @@
 /NetBeans/Tema 8/Ejercicio9Tema8/build/
 /NetBeans/Tema 8/Ejercicio9Tema8/dist/
 /NetBeans/Tema 8/Ejercicio13y14Tema8/build/
+/NetBeans/Tema 8/Ejercicio15Tema8/nbproject/private/
+/NetBeans/Tema 8/Ejercicio15Tema8/build/
