--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,5 @@
 /NetBeans/Tema 8/Ejercicio13y14Tema8/build/
 /NetBeans/Tema 8/Ejercicio15Tema8/nbproject/private/
 /NetBeans/Tema 8/Ejercicio15Tema8/build/
+/NetBeans/Tema 9/Ejercicio2Tema9/nbproject/private/
+/NetBeans/Tema 9/Ejercicio2Tema9/build/
