--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,5 @@
 /NetBeans/Tema 8/Ejercicio15Tema8/build/
 /NetBeans/Tema 9/Ejercicio2Tema9/nbproject/private/
 /NetBeans/Tema 9/Ejercicio2Tema9/build/
+/NetBeans/Tema 9/Ejercicio3Tema9/nbproject/private/
+/NetBeans/Tema 9/Ejercicio3Tema9/build/
