Ejercicio5Tema9 y teoria

--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,6 @@
 /NetBeans/Tema 9/Ejercicio2Tema9/build/
 /NetBeans/Tema 9/Ejercicio3Tema9/nbproject/private/
 /NetBeans/Tema 9/Ejercicio3Tema9/build/
+/NetBeans/Tema 9/Ejercicio5Tema9/nbproject/private/
+/NetBeans/Tema 9/temario/nbproject/private/
+/NetBeans/Tema 9/Ejercicio5Tema9/build/
