--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,6 @@
 /NetBeans/Tema 9/Ejercicio5Tema9/nbproject/private/
 /NetBeans/Tema 9/temario/nbproject/private/
 /NetBeans/Tema 9/Ejercicio5Tema9/build/
+/NetBeans/Tema 9/Ejercicio7Tema9/nbproject/private/
+/NetBeans/Tema 9/Ejercicio7Tema9/build/
+/NetBeans/Tema 9/temario/build/
