Ejercicio9Tema9 a medias

--- a/.gitignore
+++ b/.gitignore
@@ -89,3 +89,5 @@
 /NetBeans/Tema 9/Ejercicio7Tema9/nbproject/private/
 /NetBeans/Tema 9/Ejercicio7Tema9/build/
 /NetBeans/Tema 9/temario/build/
+/NetBeans/Tema 9/Ejercicio9Tema9/nbproject/private/
+/NetBeans/Tema 9/Ejercicio9Tema9/build/
